--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "css-loader": "^3.4.2",
     "fibers": "^4.0.2",
     "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.5.3",
     "sass": "^1.26.2",
     "sass-loader": "^7.3.1",
