--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vue2-perfect-scrollbar": "^1.4.0",
-    "vuetify": "^2.2.17",
+    "vuetify": "^2.2.19",
     "vuetify-loader": "^1.4.3",
     "vuex": "^3.1.3"
   },
@@ -26,6 +26,7 @@
   ],
   "devDependencies": {
     "@mdi/font": "^4.9.95",
+    "acorn": "^6.4.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -41,11 +42,10 @@
     "sass-loader": "^7.3.1",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
-    "vue-loader": "^15.9.0",
+    "vue-loader": "^15.9.1",
     "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.42.0",
+    "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
-    "acorn": "^6.4.1"
+    "webpack-dev-server": "^3.10.3"
   }
 }
